--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   shared_preferences: ^2.3.3
   http: ^1.2.2
   google_fonts: ^6.2.1
+  phosphor_flutter: ^2.1.0
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
