--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: control
-description: "A new Flutter project."
+description: "Smart Home Control App"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -39,10 +39,17 @@ dependencies:
   http: ^1.2.2
   google_fonts: ^6.2.1
   phosphor_flutter: ^2.1.0
+  flutter_launcher_icons: ^0.14.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: true
+  image_path: "assets/logos/ltn.png"
+  adaptive_icon_background: "assets/logos/ltn.png"
+  adaptive_icon_foreground: "assets/images/ltn.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,6 +68,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/logos/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
